--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Meu novo website</title>
-</head>
-<body>
-	<div>
-		<h1>Olá Mundo!</h1>
-	</div>
-</body>
+<header>
+<html lang="pt"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>COMEMORAÇÃO DE ANIVERSÁRIO EM DOSE TRIPLA</title>
+	</head>
+	<body bgcolor="Black">
+	
+<h1 align="center"> <font size="30" color="white"><b><i>Convite de Aniversário em Dose Tripla</i><b></font></h1>
+
+<!-- <h2 align="left"> <font size="20" color="gray"><b>Primeiro aninho do Thiago</b></font></h2> <br /> -->
+<p> <font size="5" color="gray"><b>1ª DOSE: <b></font> <font size="5" color="gray"> <i>Em uma viagem ao fundo do mar vamos comemorar o primeiro aninho do Thiago<i>!!!</font></p>
+
+<img src="https://i.ibb.co/QH1fcFQ/Imagem-Thiago.jpg" alt="Imagem-Thiago" border="0" width=100% heigh=100%/>
+<br></br>
+
+<p> <font size="5" color="gray"><b>2ª DOSE: <b></font> <font size="5" color="gray"> <i>No canto das sereias te convidamos para comemorar os 8 anos da nossa pequena sereia Catharina<i>!!!</font></p>
+
+<img src="https://i.ibb.co/T0L0J2B/Imagem-Thata.jpg" alt="Imagem-Thata" border="0" width=100% heigh=100%/>
+<br></br>
+
+<p> <font size="5" color="gray"><b>3ª DOSE: <b></font> <font size="5" color="gray"> <i>O clima agora é verão, vamos embarcar nesta onda e curtir os 12 anos da Yris em uma bela festa na praia!!!<i>!!!</font></p>
+
+<img src="https://i.ibb.co/j8cKM6c/Imagem-Yris.jpg" alt="Imagem-Yris" border="0" width=100% heigh=100%>
+<br></br>
+<br></br>
+<p> <font size="5" color="white"><i><b>Local da nossa festa.<b><i>!!!</font></p>
+
+<img src="https://i.ibb.co/C6GYxZ8/Endere-o.png" alt="Endere-o" border="0"  width=100% heigh=100%>
+
+<p> <font size="5" color="white"><i><b>Nota:<b><i>:</font> <font size="5" color="white"><i>Você é obrigado a comparecer em uma das festas, ou todas se preferir...rsrsrs<i>!!!</font></p>
+
+
+ </div>
+ </br>
+ 
+ 
+
+
+<!-- <div align="left" 
+<p> <font size="4" color="blink" <>NOTA: </font><font size="3" color="gray"><em>Confirme sua presença clicando nesse link, </font><a href="https://docs.google.com/forms/d/e/1FAIpQLSfNy_GX7IR2H96Yrl1qEbGHQeuPqWnyLXod5xU8cX6wlHvOUg/viewform?usp=sf_link" target="blank" title="Clique aqui para preencher o formulário sobre a recepção que iremos realizar no dia 26 às 17h."><font size="4" color="blink" <b>clique aqui</b> </font> </a> 
+<font size="3" color="gray"><em>para preenche-lo até o dia 22/09. Mesmo àqueles que não poderão comparecer.</em></font></p>   -->
+
+ </div>
+
+	</body>
 </html>
